# tau2

./: flake.nix  pyproject.toml
client/: __init__.py  api.py  main.py
server/: api.py  main.py
tau-core/: README.md  pyproject.toml
tau-core/tau_core/: __init__.py  config.py  data_access.py  net.py  rpc_client.py  rpc_server.py  storage.py  util.py
tau-sprint/: README.md  main.py  pyproject.toml
tau-sprint/client/: api.py  main.py
tau-sprint/lib/: burndown.py  sprint.py  storage.py  task.py  tau2_reader.py  util.py
tau-sprint/server/: api.py  main.py
