[tool.poetry]
name = "tau2"
version = "0.1.0"
description = "task management"
authors = []
readme = "README.md"
packages = [{include = "client"}]

[tool.poetry.dependencies]
python = "3.11"
colorama = "^0.4.6"
pycryptodome = "^3.17"
tabulate = "^0.9.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
tau2 = 'client:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
