[tool.poetry]
name = "tau-sprint"
version = "0.1.0"
description = "Sprint management layer for tau2"
authors = []
readme = "README.md"
packages = [{include = "client"}, {include = "server"}]

[tool.poetry.dependencies]
python = "^3.10"
tabulate = "^0.9.0"
colorama = "^0.4.6"
tau-core = {path = "../tau-core", develop = true}

[tool.poetry.scripts]
tau-sprint = "client.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
